# UpgrWebSite

./: .htaccess  .replit  README.md  asset-manifest.json  cgu.html  cgv.html  confidentialite.html  cookies.html  index.html  mentions-legales.html  pyproject.toml  replit.md  serve.js  server.js
.agents/: agent_assets_metadata.toml
.emergent/: emergent.yml
.github/workflows/: deploy.yml
attached_assets/: Pasted-Cr-ation-de-la-page-edouard-html-et-mise-jour-de-la-nav_1777226074382.txt  Pasted-Cr-ation-de-la-page-edouard-html-et-mise-jour-de-la-nav_1777226097220.txt  Pasted-Politique-de-Cookies-1-Introduction-Notre-blog-utilise-_1780241155509.txt
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AcademySection.jsx  ApproachSection.jsx  ContactSection.jsx  EugeneSection.jsx  Footer.jsx  HeroSection.jsx  Navigation.jsx  PositionSection.jsx  ProcessSection.jsx  ScrollToTop.jsx  SolutionsSection.jsx  SourcingDetailSection.jsx  TestimonialsSection.jsx  ValuesSection.jsx
static/css/: main.73f4cd82.css  main.73f4cd82.css.map
static/js/: main.96edafdb.js  main.96edafdb.js.map
upgr/: .htaccess  bon-de-commande.html  cgu.html  cgv.html  confidentialite.html  extrait-idee-au-plan.html  extrait-vos-competences-invisibles.html  mentionslegales.html  politiquedecookies.html  vente-edouard.html  vente-eugene.html
upgr/cgu/: index.html
upgr/cgv/: index.html
upgr/confidentialite/: index.html
upgr/mentionslegales/: index.html
upgr/politiquedecookies/: index.html
(+2 files in other folders)
