[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi==0.110.1",
    "motor==3.3.1",
    "pydantic>=2.6.4",
    "pymongo==4.5.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "uvicorn==0.25.0",
]
